# shortcut-tools

./: README.md  pyproject.toml
src/shortcut_tools/: main.py
