[project]
name = "shortcut-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "python-frontmatter>=1.3.0",
    "requests>=2.34.2",
]

[project.scripts]
shortcut-tools = "shortcut_tools.main:main"